[package]
name = "vpn_libs_endpoint"
version = "0.1.0"
authors = ["Sergei Gunchenko <s.gunchenko@adguard.com>"]
edition = "2021"

[lib]
name = "vpn_libs_endpoint"
path = "src/lib.rs"
doctest = false

[build-dependencies]
cc = "=1.0.79"

[dependencies]
async-trait = "=0.1.68"
base64 = "=0.21.2"
bytes = "=1.4.0"
chrono = "=0.4.26"
dynfmt = { version = "=0.1.5", features = ["curly"], default-features = false }
futures = "=0.3.28"
h2 = "=0.3.20"
http = "=0.2.9"
httparse = "=1.8.0"
lazy_static = "=1.4.0"
libc = "=0.2.147"
log = "=0.4.19"
macros = { version = "0.1.0", path = "../macros", optional = true }
once_cell = "=1.18.0"
prometheus = { version = "=0.13.3", features = ["process"] }
quiche = { version = "=0.17.2", features = ["qlog"] }
ring = "=0.16.20"
rust-crypto = "=0.2.36"
rustls = { version = "=0.21.2", features = ["logging"] }
rustls-pemfile = "=1.0.2"
serde = "=1.0.164"
smallvec = "=1.10.0"
tokio = { version = "=1.28.2", features = ["net", "rt", "sync", "time", "macros", "rt-multi-thread"] }
tokio-rustls = "=0.24.1"
toml_edit = "=0.19.10"

[dev-dependencies]
hyper = { version = "=0.14.26", features = ["http1", "http2", "client", "server", "runtime", "stream"] }
rustls = { version = "=0.21.2", features = ["logging", "dangerous_configuration"] }

[features]
rt_doc = ["dep:macros"]
tracing = ["tokio/tracing"]
