[package]
name = "vpn_endpoint_tools"
version = "0.1.0"
authors = ["Sergei Gunchenko <s.gunchenko@adguard.com>"]
edition = "2021"

[[bin]]
name = "setup_wizard"
path = "setup_wizard/main.rs"

[dependencies]
chrono = "=0.4.26"
clap = "=4.3.8"
dialoguer = "=0.10.4"
lazy_static = "=1.4.0"
once_cell = "=1.18.0"
rcgen = "=0.10.0"
serde = "=1.0.164"
toml = "=0.7.4"
toml_edit = "=0.19.10"
vpn_libs_endpoint = { version = "0.1", path = "../lib", features = ["rt_doc"] }
x509-parser = "=0.15.0"
